@@ -1,3 +1,12 @@
+2000-05-22  Federico Mena Quintero  <federico@helixcode.com>
+
+	* configure.in: Bumped version number to 0.8.0.
+
+	* doc/Makefile.am (content_files): The toplevel gdk-pixbuf.sgml
+	file was not being distributed.
+
+	* gdk-pixbuf/pixops/Makefile.am (EXTRA_DIST): Added DETAILS.
+
 2000-05-09  Darin Adler  <darin@eazel.com>
 
 	* gdk-pixbuf/gdk-pixbuf-drawable.c: (rgb565lsb), (rgb565msb),
